--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -48,7 +48,7 @@
         <hr>
 
         <footer>
-            Pathompong Phongsaporamut &copy; Bakery Shop
+            Tahmid  &copy; Bakery Shop
         </footer>
     </div>
 
